fixed un-centered buttons on mobile screens

--- a/src/Scss/App.scss
+++ b/src/Scss/App.scss
@@ -736,21 +736,20 @@ p {
     height: 100vh;
     text-align: center;
     padding: 20px;
-  
+
     .error-title {
-      font-size: 4rem;
-      font-weight: bold;
-      color: #5e3bee;
-      margin-bottom: 10px;
+        font-size: 4rem;
+        font-weight: bold;
+        color: #5e3bee;
+        margin-bottom: 10px;
     }
-  
+
     .error-message {
-      font-size: 2rem;
-      color: #282938;
-      margin-bottom: 30px;
+        font-size: 2rem;
+        color: #282938;
+        margin-bottom: 30px;
     }
-  }
-  
+}
 
 @media only screen and (max-width: 1800px) {
     .hero--section--title {
@@ -781,7 +780,7 @@ p {
     .skills--section--card--content {
         gap: 20px;
     }
-    
+
     .skills--section--title {
         font-size: 23px;
         line-height: 30px;
@@ -877,7 +876,7 @@ p {
     .portfolio--container {
         align-items: center;
     }
-    
+
     .hero--section--content {
         align-items: center;
     }
@@ -988,7 +987,10 @@ p {
         align-items: center;
         justify-content: center;
         margin-left: 57px;
+        margin: 0 auto;
+        display: block;
     }
+
     .navbar {
         justify-content: center;
         align-items: center;
